<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_cuestionario"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_1_marque_sus_habilidades" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkbox_autoconocimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_autoconocimiento" />

            <CheckBox
                android:id="@+id/checkbox_empatia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_empat_a" />

            <CheckBox
                android:id="@+id/checkbox_comunicacion_asertiva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_comunicaci_n_asertiva" />

            <CheckBox
                android:id="@+id/checkbox_toma_decisiones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_toma_de_decisiones" />

            <CheckBox
                android:id="@+id/checkbox_pensamiento_critico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_pensamiento_cr_tico" />

            <CheckBox
                android:id="@+id/checkbox_ninguno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_ninguno" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_cuan_significativo_es_tu_trabajo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_mucho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_bien" />

            <RadioButton
                android:id="@+id/radio_mas_o_menos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rmasomenos" />

            <RadioButton
                android:id="@+id/radio_poco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_poco" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_3_qu_tan_bien_te_pagan_en_el_trabajo_que_haces"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_bien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_bien" />

            <RadioButton
                android:id="@+id/radio_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_regular" />

            <RadioButton
                android:id="@+id/radio_mal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_mal" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_4_trabajas_bajo_presi_n" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_si_presion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_s" />

            <RadioButton
                android:id="@+id/radio_no_presion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_no" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_5_tienes_oportunidad_de_crecimiento_en_tu_trabajo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_si_crecimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_s" />

            <RadioButton
                android:id="@+id/radio_no_crecimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_no" />
        </LinearLayout>

        <Button
            android:id="@+id/button_resolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Resolver"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</ScrollView>

